# agreg

./: .vimrc  README.md  a2023_s1_e1_p3.circ  setup.sh
logique/: a2023_s1_e1_p3.circ  elements_de_reponse.md
ocaml/: 2023_epreuve-1_part-II.md
ocaml/P2023_epreuve_1_partII/: dune-project
ocaml/P2023_epreuve_1_partII/lib/: dune
ocaml/P2023_epreuve_1_partII/test/: dune
ocaml/agreg_2023_epreuve_1_part_II/: dune-project
ocaml/agreg_2023_epreuve_1_part_II/lib/: dune
ocaml/agreg_2023_epreuve_1_part_II/test/: dune
